--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,32 +1,63 @@
 set -g prefix C-s
 unbind C-b
 set -g base-index 1
-set -g escape-time 20
+set -g escape-time 10
+setw -g mouse on
 bind-key -n C-h  "select-pane -L"
 bind -n C-j  "select-pane -D"
 bind -n C-k  "select-pane -U"
 bind -n C-l  "select-pane -R"
 bind -n C-\  "select-pane -l"
-# bind -n M-h select-pane -L
-# bind -n M-j select-pane -D
-# bind -n M-k select-pane -U
-# bind -n M-l select-pane -R
-# set -g status-bg black
-# set -g status-bg white
 set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 
 # set-option -g prefix C-i
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+set -g mouse on
 
 
-## COLORSCHEME: gruvbox dark (medium)
+
+# Some handy keybindings. They are self-explanatory.
+bind r source-file ~/.tmux.conf \; display "Reloaded!" # Reload configurations
+
+bind C-c new-session # Create a new session using 'C-a C-c'
+
+# Mouse controls turned on like in a regular GUI terminal
+
+# Vim-style pane selection
+setw -g mode-keys vi
+
+# Automatic window renaming
+setw -g automatic-rename
+
+# # Status bar
+# set -g status-bg black # Background color
+# set -g status-fg black # Text color
+# set -g status-interval 60 # Update interval
+# set -g status-left-length 30 # Left segment length
+# # set -g status-right-length 150 # Right segment length
+# # set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P" # Left status bar text
+# set -g status-right "#[fg=green]#(date)" # Right status bar text display time
+
+
+# Automatic window numbering. This is useful when you delete a window.
+set -g renumber-windows on
+
+# History limit. Increase the scrollback buffer to store more history.
+set -g history-limit 10000
+
+# install tpm (tmux plugin manager) if not already installed:
+
+# add this line to your .tmux.conf file
+# COLORSCHEME: gruvbox dark (medium)
 # set-option -g status "on"
 
 # # default statusbar color
-# set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 
+# set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 # # default window title colors
 # set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
 
@@ -50,10 +81,15 @@ bind - split-window -v -c "#{pane_current_path}"
 # set-option -g display-panes-active-colour colour250 #fg2
 # set-option -g display-panes-colour colour237 #bg1
 
+# bind C-o display-popup -E "tms"
 
+bind C-s display-popup -E "tms switch"
+bind C-w display-popup -E "tms windows"
+
+bind-key -r C-o run-shell "tmux neww ~/.local/scripts/t-sessions"
 # bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
 
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 # set-option -g status-justify "left"
 # set-option -g status-left-style none
@@ -67,5 +103,35 @@ set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red
 
 # set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
 # set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
+# Focus events enabled for terminals that support them
+set -g focus-events on
 
+setw -g aggressive-resize on
+# TMUX_FZF_LAUNCH_KEY="C-f"
+
+# TMUX_FZF_MENU=\
+# "attach session\n~/.tmux/plugins/tmux-fzf/scripts/session.sh attach\n"\
+# "rename window\n/home/sainnhe/.tmux/plugins/tmux-fzf/scripts/window.sh rename\n"
+
+# bind-key "f" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh switch"
+# bind-key "n" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh new"
+
+# bind-key "C-w" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/window.sh sith"
+
+# Easier and faster switching between next/prev window
 # # vim: set ft=tmux tw=0 nowrap:r
+
+# then add tp-git and gruvbox plugin as well
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# set -g @plugin 'tmux-plugins/tmux-resurrect' # C-s C-r
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'sainnhe/tmux-fzf'
+
+set -g @plugin 'tmux-plugins/tmux-gitbar'
+set -g @gitbar_icon_detached "#[fg=colour214, bg=colour236]⎇ "
+set -g @gitbar_branch_color "colour208"
+run -b '~/.tmux/plugins/tpm/tpm'
+
+
