--- a/.tmate.conf
+++ b/.tmate.conf
@@ -1,8 +1,8 @@
 
 
 source-file ~/.tmux.conf
-bind-key -n C-h  "select-pane -L"
-bind-key -n C-j  "select-pane -D"
-bind-key -n C-k  "select-pane -U"
-bind-key -n C-l  "select-pane -R"
-bind-key -n C-\  "select-pane -l"
+# bind-key -n C-h  "select-pane -L"
+# bind-key -n C-j  "select-pane -D"
+# bind-key -n C-k  "select-pane -U"
+# bind-key -n C-l  "select-pane -R"
+# bind-key -n C-\  "select-pane -l"
