--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,11 +18,11 @@ bind - split-window -v -c "#{pane_current_path}"
 
 set -g mouse on
 
+# Reload configurations
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Some handy keybindings. They are self-explanatory.
-bind r source-file ~/.tmux.conf \; display "Reloaded!" # Reload configurations
-
-bind C-c new-session # Create a new session using 'C-a C-c'
+# create a new session using 'C-s C-c'
+bind C-c new-session
 
 # Vim-style pane selection
 setw -g mode-keys vi
@@ -30,101 +30,64 @@ setw -g mode-keys vi
 # Automatic window renaming
 setw -g automatic-rename
 
-# # Status bar
-# set -g status-bg black # Background color
-# set -g status-fg black # Text color
-# set -g status-interval 60 # Update interval
-# set -g status-left-length 30 # Left segment length
-# # set -g status-right-length 150 # Right segment length
-# # set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P" # Left status bar text
-# set -g status-right "#[fg=green]#(date)" # Right status bar text display time
-
 # Automatic window numbering. This is useful when you delete a window.
 set -g renumber-windows on
 
 # History limit. Increase the scrollback buffer to store more history.
 set -g history-limit 10000
 
-# install tpm (tmux plugin manager) if not already installed:
-
-# add this line to your .tmux.conf file
-# COLORSCHEME: gruvbox dark (medium)
-# set-option -g status "on"
-
-# # default statusbar color
-
-# set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
-# # default window title colors
-# set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
-
-# # default window with an activity alert
-# set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
-
-# # active window title colors
-# set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
-
-# # pane border
-# set-option -g pane-active-border-style fg=colour250 #fg2
-# set-option -g pane-border-style fg=colour237 #bg1
-
-# # message infos
-# set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
-
-# # writing commands inactive
-# set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
-
-# # pane number display
-# set-option -g display-panes-active-colour colour250 #fg2
-# set-option -g display-panes-colour colour237 #bg1
-
-# bind C-o display-popup -E "tms"
-
+# tms
+bind C-o display-popup -E "tms"
 bind C-s display-popup -E "tms switch"
 bind C-w display-popup -E "tms windows"
 
 
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-# set-option -g status-justify "left"
-# set-option -g status-left-style none
-# set-option -g status-left-length "80"
-# set-option -g status-right-style none
-# set-option -g status-right-length "80"
-# set-window-option -g window-status-separator ""
-
-# set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
-# set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
-
-# set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
-# set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
 # Focus events enabled for terminals that support them
 set -g focus-events on
 
 setw -g aggressive-resize on
-# TMUX_FZF_LAUNCH_KEY="C-f"
 
-# TMUX_FZF_MENU=\
-# "attach session\n~/.tmux/plugins/tmux-fzf/scripts/session.sh attach\n"\
-# "rename window\n/home/sainnhe/.tmux/plugins/tmux-fzf/scripts/window.sh rename\n"
+unbind p
+bind p previous-window
+bind -r g display-popup -d '#{pane_current_path}' -w80% -h80% -E lazygit # open lazygit in a popup
 
-# bind-key "f" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh switch"
-# bind-key "n" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh new"
+set -g status-position top
+## COLORSCHEME: gruvbox dark (medium)
+set-option -g status "on"
 
-# bind-key "C-w" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/window.sh sith"
+# default statusbar color
+set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 
-# Easier and faster switching between next/prev window
-# # vim: set ft=tmux tw=0 nowrap:r
+# default window title colors
+set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
 
-# then add tp-git and gruvbox plugin as well
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-# set -g @plugin 'tmux-plugins/tmux-resurrect' # C-s C-r
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @plugin 'sainnhe/tmux-fzf'
+# default window with an activity alert
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
 
-set -g @plugin 'tmux-plugins/tmux-gitbar'
-set -g @gitbar_icon_detached "#[fg=colour214, bg=colour236]⎇ "
-set -g @gitbar_branch_color "colour208"
-run -b '~/.tmux/plugins/tpm/tpm'
+# active window title colors
+set-window-option -g window-status-current-style bg=yellow,fg=colour237 # fg=bg1
 
+# pane border
+set-option -g pane-active-border-style fg=colour250 #fg2
+set-option -g pane-border-style fg=colour237 #bg1
 
+# message infos
+set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+
+# writing commands inactive
+set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+
+# pane number display
+set-option -g display-panes-active-colour colour250 #fg2
+set-option -g display-panes-colour colour237 #bg1
+
+# bell
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+
+## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
+set-option -g status-justify "left"
+set-option -g status-left-style none
+set-option -g status-left-length "80"
+set-option -g status-right-style none
+set-option -g status-right-length "80"
+set-window-option -g window-status-separator ""
