--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,9 @@ bind -n C-j  "select-pane -D"
 bind -n C-k  "select-pane -U"
 bind -n C-l  "select-pane -R"
 bind -n C-\  "select-pane -l"
+
 set -g default-terminal "screen-256color"
+
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 
@@ -91,3 +93,12 @@ set-option -g status-left-length "80"
 set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
+
+
+##set inactive/active window styles
+#set -g window-style 'fg=colour247,bg=colour236'
+#set -g window-active-style 'fg=colour250,bg=black'
+
+## set the pane border colors
+#set -g pane-border-style 'fg=colour235,bg=colour238'
+#set -g pane-active-border-style 'fg=colour51,bg=colour236'
