--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,11 +29,11 @@ bind C-c new-session
 # Vim-style pane selection
 setw -g mode-keys vi
 
-# Automatic window renaming
-setw -g automatic-rename
-
-# Automatic window numbering. This is useful when you delete a window.
-set -g renumber-windows on
+# # Automatic window renaming
+# setw -g automatic-rename
+#
+# # Automatic window numbering. This is useful when you delete a window.
+# set -g renumber-windows on
 
 # History limit. Increase the scrollback buffer to store more history.
 set -g history-limit 10000
@@ -54,47 +54,70 @@ bind p previous-window
 bind -r g display-popup -d '#{pane_current_path}' -w80% -h80% -E lazygit # open lazygit in a popup
 
 set -g status-position top
-## COLORSCHEME: gruvbox dark (medium)
-set-option -g status "on"
-
-# default statusbar color
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
-
-# default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
-
-# default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
-
-# active window title colors
-set-window-option -g window-status-current-style bg=yellow,fg=colour237 # fg=bg1
-
-# pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
-set-option -g pane-border-style fg=colour237 #bg1
-
-# message infos
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
-
-# writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
-
-# pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
-
-# bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
-
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-justify "left"
-set-option -g status-left-style none
-set-option -g status-left-length "80"
-set-option -g status-right-style none
-set-option -g status-right-length "80"
-set-window-option -g window-status-separator ""
 
 
+run ~/.config/tmux/plugins/catppuccin/catppuccin.tmux
+set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
+
+
+
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_window_middle_separator " | "
+
+set -g @catppuccin_window_default_fill "none"
+
+set -g @catppuccin_window_current_fill "all"
+
+set -g @catppuccin_status_modules_right "application session user host date_time"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+
+
+
+# ## COLORSCHEME: gruvbox dark (medium)
+# set-option -g status "on"
+#
+# # default statusbar color
+# set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+#
+# # default window title colors
+# set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+#
+# # default window with an activity alert
+# set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+#
+# # active window title colors
+# set-window-option -g window-status-current-style bg=yellow,fg=colour237 # fg=bg1
+#
+# # pane border
+# set-option -g pane-active-border-style fg=colour250 #fg2
+# set-option -g pane-border-style fg=colour237 #bg1
+#
+# # message infos
+# set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+#
+# # writing commands inactive
+# set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+#
+# # pane number display
+# set-option -g display-panes-active-colour colour250 #fg2
+# set-option -g display-panes-colour colour237 #bg1
+#
+# # bell
+# set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+#
+# ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
+# set-option -g status-justify "left"
+# set-option -g status-left-style none
+# set-option -g status-left-length "80"
+# set-option -g status-right-style none
+# set-option -g status-right-length "80"
+# set-window-option -g window-status-separator ""
+#
+#
 ##set inactive/active window styles
 #set -g window-style 'fg=colour247,bg=colour236'
 #set -g window-active-style 'fg=colour250,bg=black'
