--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 *.log
 *packer_compiled.lua
 
+*venv*
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,linux
