fix: alacritty, pudb

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 *venv*
 
-
+*shell-history*
 # Created by https://www.toptal.com/developers/gitignore/api/macos,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,linux
 
