--- a/pudb/.config/pudb/pudb.cfg
+++ b/pudb/.config/pudb/pudb.cfg
@@ -13,9 +13,9 @@ hotkeys_code = C
 hotkeys_stack = S
 hotkeys_toggle_cmdline_focus = ctrl x
 hotkeys_variables = V
-line_numbers = False
+line_numbers = True
 prompt_on_quit = True
-seen_welcome = e045
+seen_welcome = e046
 shell = ptpython
 sidebar_width = 0.17592186044416003
 stack_weight = 1
